# python-django-api-template

./: Makefile  PoCTests.postman_collection.json  README.md  main.py  manage.py  pyproject.toml  pytest.ini
src/: example.py
src/application/: apps.py  models.py  urls.py
src/application/migrations/: 0001_initial.py
src/application/presentation/deals/: controller.py  serializers.py  views.py
src/application/presentation/deals/controllers/: create_deal_controller.py  delete_deal_controller.py  get_all_deals_controller.py  get_deal_by_id_controller.py  update_deal_controller.py
src/application/tasks/deals/: tasks.py
src/application/usecase/deals/: create_deal.py  create_deal_test.py  delete_deal.py  delete_deal_test.py  get_all_deals.py  get_all_deals_test.py  get_deal_by_id.py  get_deal_by_id_test.py  update_deal.py  update_deal_test.py
src/config/: celery.py  settings.py  test_settings.py  urls.py
src/core/: apps.py  models.py
src/core/migrations/: 0001_initial.py
src/django/: __init__.py  models.py
src/django/__project__/: apps.py  models.py  models.py.old
src/django/__project__/migrations/: 0001_initial.py
src/django/config/: settings.py  wsgi.py
src/domain/: apps.py
src/domain/deals/: entities.py  entity.py  entity_test.py  repository.py  test_entities.py
src/infra/: apps.py
src/infra/celery/: app.py
src/infra/db/deal/: db_repository_test.py
src/infra/db/deals/: db_repository_test.py
src/infra/http/: controller.py
src/infra/postgres/deal/: db_repository.py  db_repository_test.py
