[project]

dependencies = [
  "pydantic>=2.11.7",
]
description = "Add your description here"
name = "python-django-api-template"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "django-stubs[compatible-mypy]>=5.2.1",
  "mypy>=1.16.0",
  "ruff>=0.11.13",
]

dependencies = [
  "django==5.2.2",
  "djangorestframework>=3.16.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.django.config.settings"
addopts = "-ra"
python_files = "test_*.py"

[tool.ruff]
fix = true
ignore = ["D100"]
line-length = 90
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "D", # pydocstyle
  "ANN", # flake8-annotations (type hints)
  "B", # flake8-bugbear
  "UP", # pyupgrade
  "S", # flake8-bandit
]
src = ["src"]
target-version = "py313"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
# Require type annotations for all functions and methods
extend-select = ["ANN"]
# Make missing type annotations an error

[tool.ruff.lint.flake8-annotations]
# allow-star-arg-any = false # Test with this in future
allow-star-arg-any = false
mypy-init-return = true
suppress-dummy-args = false

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = ["src"]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
strict = true

[tool.django-stubs]
django_settings_module = "config.settings"
